# ADAS

./: .gitignore  README.md  __init__.py  check_tflite_scale.py  export_model.py  requirements.txt
.claude/workflows/: find-bugs.js
android_app/: gradle.properties  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/example/adas/: AdasCameraScreen.kt  AdasViewModel.kt  AlertBanner.kt  Detection.kt  DetectionOverlay.kt  EventLogScreen.kt  FrameAnalyzer.kt  HomeScreen.kt  HudBottomBar.kt  HudTopBar.kt  InferenceEngine.kt  (+6 more)
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/gradle/: libs.versions.toml
cloud_backend/: cloud_scorer.py
data/frames/: .gitkeep
data/telemetry/: .gitkeep
esp32_firmware/: CMakeLists.txt  yolov8_quantization_guide.md
esp32_firmware/main/: CMakeLists.txt  camera_task.cpp  camera_task.h  can_obd_task.cpp  can_obd_task.h  h264_encoder_task.cpp  h264_encoder_task.h  inference_task.cpp  inference_task.h  kalman_tracker.cpp  kalman_tracker.h  main.cpp
legacy_python_edge/src/: active_learner.py  adaptive_threshold.py  data_logger.py  main.py  obd_simulator.py  temporal_model.py
legacy_python_edge/tests/: test_adaptive_threshold.py  test_kalman_tracker.py  test_temporal.py
legacy_python_edge/utils/: config.py
models/: .gitkeep
src/: __init__.py  __main__.py  camera_module.py  clip_buffer.py  cloud_scorer.py  kalman_tracker.py
tests/: test_adaptive_threshold.py
yolov8n_saved_model/: fingerprint.pb  metadata.yaml
(+8 files in other folders)
