idf_component_register(SRCS "main.cpp"
                           "camera_task.cpp"
                           "can_obd_task.cpp"
                           "h264_encoder_task.cpp"
                           "inference_task.cpp"
                           "kalman_tracker.cpp"
                    INCLUDE_DIRS ".")
